# knside-out-engine

./: .gitignore  .gitmodules  README.md  capsule.toml  deployment.toml
contracts/c/: Makefile
contracts/c/c/: entry.c  header.h  high_level.h  inject.h  lua_json.h  lua_wrap.h  main.c
contracts/c/c/common/: header.h  high_level.h  inject.h  injection.h  lua_json.h  lua_wrap.h
contracts/c/c/molecule/: protocol.h  protocol.mol
contracts/c/c/verifier/: flag_global.h  flag_personal.h  flag_request.h
contracts/c/c/verifier/utility/: callback.h  injection.h
contracts/c/lua/: .gitignore  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  linit.c  lmathlib.c  lstate.c  lstrlib.c  ltablib.c  ltime.c  ltime.h  lua.c  lua.h  luaconf.h  lualib.h  lvm.c  makefile  onelua.c
tests/: Cargo.toml
tests/lua/: loot.lua  nft.lua
tests/src/: helper.rs  lib.rs  tests.rs
tests/src/protocol/: kabletop.mol  kabletop.rs  mod.rs  protocol.mol  protocol.rs
